--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,60 @@
+/* Ajustes generales */
 body {
   background-color: #000000;
   font-family: "Montserrat", "Open Sans", sans-serif;
   margin: 0;
   padding: 0;
   overflow-x: hidden;
+  display: flex;
+  flex-direction: column;
+  align-items: center; /* Centra el contenido horizontalmente */
 }
 
+main {
+  width: 100%;
+  max-width: 1200px; /* Limita el ancho de la página para mejor legibilidad */
+  padding: 20px; /* Espacio interno alrededor del contenido */
+}
+
+/* Espaciado entre secciones */
+.section {
+  margin: 40px 0; /* Ajusta este valor para cambiar la distancia entre secciones */
+}
+
+/* Menu */
+.menu {
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+  padding-top: 30px;
+}
+
+.menu ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center; /* Centra el menú */
+}
+
+.menu ul li {
+  margin: 0 20px;
+}
+
+.menu ul li a {
+  text-decoration: none;
+  text-transform: uppercase;
+  color: #ffffff;
+  padding: 15px 20px;
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.menu ul li a:hover {
+  background-color: #010101;
+  color: white;
+}
+
+/*video estrellas*/
 .background-video {
   position: fixed;
   top: 0;
@@ -22,6 +71,7 @@ body {
   object-fit: cover;
 }
 
+/*logo blow*/
 .titulo-contenedor {
   display: flex;
   justify-content: center;
@@ -48,128 +98,93 @@ body {
   margin-top: 20px; /* Puedes ajustar este valor para espaciar el logo desde la parte superior */
 }
 
-.flecha {
-  position: fixed; /* Mantiene la flecha fija en la pantalla al hacer scroll */
-  bottom: 20px; /* Acomoda la flecha a cierta distancia del borde inferior */
-  right: 50px; /* Acomoda la flecha a cierta distancia del borde derecho */
-  width: 220px; /* Ajusta el tamaño de la flecha */
-  height: 190px;
-  cursor: pointer; /* Cambia el cursor para indicar que es clickeable */
-}
-
-.flecha img {
-  width: 100%;
-  height: auto;
-}
-
-/*intro*/
-.titulo__intro {
+/* Intro */
+.titulo__intro,
+.titulo__nosotros,
+.titulo__socios {
   font-size: 25px;
   text-transform: uppercase;
   font-weight: bolder;
   color: white;
   margin-bottom: 20px;
-}
-
-.contenedor__intro {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding: 20px;
-  padding-bottom: 100px;
-}
-
-.parrafo__intro {
-  color: white;
-  max-width: 800px;
-  text-align: center;
-  font-size: 20px;
-  line-height: 1.6;
-  padding-bottom: 30px;
-}
-
-/*nosotros*/
-.contenedor__nosotros {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding: 20px;
-}
-
-.titulo__nosotros {
-  font-size: 25px;
-  text-transform: uppercase;
-  font-weight: bolder;
-  color: white;
-  margin-bottom: 20px;
-}
-
-.parrafo__nosotros {
-  color: white;
-  max-width: 800px;
-  text-align: center;
-  font-size: 20px;
-  line-height: 1.6;
 }
 
 .titulo__secundario__nosotros {
-  font-size: 17px;
-  text-transform: uppercase;
-  color: rgb(255, 255, 255);
-  font-weight: lighter;
-  margin-bottom: 20px;
-  padding-top: 30px;
+  padding-top: 0;
 }
 
-.parrafo__secundario__nosotros {
-  color: white;
-  max-width: 800px;
-  text-align: center;
-  font-size: 20px;
-  line-height: 1.6;
-  padding-bottom: 100px;
-}
-
-/*socios*/
+.contenedor__intro,
+.contenedor__nosotros,
 .contenedor__socios {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   padding: 20px;
-  padding-bottom: 100px;
 }
 
-.titulo__socios {
-  font-size: 25px;
-  text-transform: uppercase;
-  color: rgb(255, 255, 255);
-  font-weight: bolder;
-  margin-bottom: 20px;
+.contenedor__secundario__nosotros {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
 }
 
+/* Aplica la clase de sección a estos contenedores */
+.contenedor__intro,
+.contenedor__nosotros,
+.contenedor__socios,
+.contenedor__secundario__nosotros,
+.contenedor__reprocann {
+  margin: 40px 0; /* Ajusta la separación entre secciones */
+}
+
+.parrafo__intro,
+.parrafo__nosotros,
+.parrafo__secundario__nosotros,
 .parrafo__socios {
   color: white;
   max-width: 800px;
   text-align: center;
   font-size: 20px;
   line-height: 1.6;
+  padding-bottom: 0px;
+}
+
+/* Sección Nosotros */
+#nosotros {
+  text-align: center;
+  padding-top: 90px;
+}
+
+.titulo__secundario__nosotros {
+  font-size: 25px;
+  text-transform: uppercase;
+  font-weight: bolder;
+  color: white;
+  margin-bottom: 30px;
+}
+
+/* Sección Socios */
+#socios {
+  text-align: center;
+  padding-top: 90px;
 }
 
 /*reprocan*/
 #reprocann {
   color: white;
   padding: 20px;
-  margin: 20px 0;
   text-align: center;
+  padding-top: 90px;
 }
 
 .contenedor__reprocann {
   max-width: 1200px;
   margin: 0 auto;
   padding: 20px;
+  padding-bottom: 100px;
 }
 
 .titulo__reprocann {
@@ -241,147 +256,4 @@ body {
   text-align: center;
   max-width: 600px;
   margin: 0 auto;
-}
-
-.scroll-button {
-  position: fixed;
-  bottom: 20px;
-  right: 60px;
-  background: none; /* Sin fondo */
-  border: none; /* Sin borde */
-  font-weight: bold; /* Negrita */
-  text-transform: uppercase;
-  font-size: 25px; /* Tamaño de fuente ajustable */
-  cursor: pointer;
-  z-index: 1000; /* Asegurar que esté encima de otros elementos */
-  color: white; /* Ajustar color del texto */
-}
-
-/*animaciones*/
-@keyframes serpentear {
-  0% {
-    transform: translateX(0) rotate(0deg);
-  }
-  25% {
-    transform: translateX(5px) rotate(5deg);
-  }
-  50% {
-    transform: translateX(-5px) rotate(-5deg);
-  }
-  75% {
-    transform: translateX(5px) rotate(5deg);
-  }
-  100% {
-    transform: translateX(0) rotate(0deg);
-  }
-}
-
-/* Estilo del meteorito */
-.meteorito img {
-  position: absolute;
-  top: 50px; /* Ajusta la altura desde la parte superior de la pantalla */
-  right: -100px; /* Comienza fuera de la pantalla a la derecha */
-  width: 300px; /* Ajusta el tamaño del meteorito */
-  height: 200px;
-  animation: volarMeteorito 7s linear infinite; /* Aumenta a 15 segundos para que sea más lento */
-}
-
-/* Animación para mover el meteorito de derecha a izquierda sin rotación */
-@keyframes volarMeteorito {
-  0% {
-    transform: translateX(0) rotate(40deg); /* Comienza en su posición inicial y derecho */
-  }
-  100% {
-    transform: translateX(-150vw) rotate(30deg); /* Se mueve más allá de la pantalla hacia la izquierda y sigue derecho */
-  }
-}
-
-/* Aumentar el espacio entre el marciano y el texto */
-.texto-marciano {
-  display: flex;
-  justify-content: center; /* Mantiene centrado */
-  align-items: center;
-  gap: 50px; /* Aumenta el espacio entre el marciano y el texto */
-}
-
-/* Mantener el texto centrado y fijo en su lugar */
-.texto-contenido {
-  max-width: 800px; /* Consistente con el resto del diseño */
-  text-align: center;
-  font-size: 20px;
-  line-height: 1.6;
-  margin: 0 auto; /* Centra el párrafo */
-  position: relative; /* Posicionamiento relativo para gráficos absolutos */
-}
-
-/* Alinear el marciano sin desplazar el texto */
-.marciano {
-  position: absolute; /* Elimina el marciano del flujo del documento */
-  top: 100%; /* Ajusta la posición desde arriba */
-  left: 7%; /* Ajusta la posición desde la izquierda para colocarlo donde lo desees */
-  transform: translate(-50%, -50%); /* Centra el marciano */
-
-  animation: serpenteoEnLugar 5s infinite ease-in-out; /* Animación continua y suave */
-}
-
-.marciano img {
-  width: 230px; /* Ajusta el tamaño del marciano */
-  height: auto;
-}
-
-/* Animación de serpenteo en el lugar */
-@keyframes serpenteoEnLugar {
-  0% {
-    transform: translate(0, 0) rotate(0deg); /* Posición inicial sin rotación */
-  }
-  25% {
-    transform: translate(10px, -5px) rotate(5deg); /* Se mueve un poco hacia la derecha y hacia arriba, con ligera rotación */
-  }
-  50% {
-    transform: translate(-10px, 5px) rotate(-5deg); /* Mueve hacia la izquierda y abajo */
-  }
-  75% {
-    transform: translate(10px, -5px) rotate(5deg); /* Se mueve nuevamente hacia la derecha y arriba */
-  }
-  100% {
-    transform: translate(0, 0) rotate(0deg); /* Vuelve a la posición original */
-  }
-}
-
-.texto-marciano-verde {
-  display: flex;
-  justify-content: center; /* Mantiene centrado */
-  align-items: center;
-  gap: 50px; /* Aumenta el espacio entre el marciano y el texto */
-}
-
-/* Alinear el marciano sin desplazar el texto */
-.marciano-verde {
-  position: absolute; /* Elimina el marciano del flujo del documento */
-  top: 180%; /* Ajusta la posición desde arriba */
-  right: 3%; /* Ajusta la posición desde la izquierda para colocarlo donde lo desees */
-  animation: aparecerYBailar 3s forwards; /* Aplica la animación */
-}
-
-.marciano-verde img {
-  width: 230px; /* Ajusta el tamaño del marciano */
-  height: auto;
-}
-
-@keyframes aparecerYBailar {
-  0% {
-    right: -150px; /* Fuera de la pantalla a la derecha */
-  }
-  50% {
-    right: 20px; /* Posición final */
-  }
-  70% {
-    transform: translateX(10px); /* Movimiento suave hacia la derecha */
-  }
-  80% {
-    transform: translateX(-10px); /* Movimiento suave hacia la izquierda */
-  }
-  100% {
-    transform: translateX(0); /* Regresa a la posición original */
-  }
 }
