--- a/css/styles.css
+++ b/css/styles.css
@@ -184,7 +184,7 @@ main {
   max-width: 1200px;
   margin: 0 auto;
   padding: 20px;
-  padding-bottom: 100px;
+  padding-bottom: 50px;
 }
 
 .titulo__reprocann {
@@ -240,7 +240,7 @@ main {
 }
 
 .lista__inscripcion li:last-child {
-  border-bottom: none; /* Elimina la línea del último elemento */
+  border-bottom: none;
 }
 
 .titulo__secundario__reprocann {
@@ -256,4 +256,19 @@ main {
   text-align: center;
   max-width: 600px;
   margin: 0 auto;
+}
+
+/*boton formulario*/
+.button__form {
+  display: inline-block;
+  padding: 15px 20px;
+  background-color: #2a21ca;
+  color: white;
+  text-decoration: none;
+  border-radius: 4px;
+  text-align: center;
+}
+
+.button__form:hover {
+  background-color: #004792;
 }
