--- a/css/styles.css
+++ b/css/styles.css
@@ -341,3 +341,11 @@ main {
     font-family: "Montserrat", "Open Sans", sans-serif;
   }
 }
+
+@media (max-width: 768px) {
+  .background-video {
+    background-image: url("../multimedia/background.mp4");
+    background-size: cover;
+    background-position: center;
+  }
+}
